--- a/DirectXGame.vcxproj.filters
+++ b/DirectXGame.vcxproj.filters
@@ -167,6 +167,9 @@
     <ClCompile Include="Game\Time\GameTimer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\Graphics\Managers\ImGuiManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -227,5 +230,6 @@
     <ClInclude Include="Game\Scene\Methods\SceneFactory.h" />
     <ClInclude Include="Game\Scene\DebugScene.h" />
     <ClInclude Include="Game\Time\GameTimer.h" />
+    <ClInclude Include="Engine\Core\Graphics\Managers\ImGuiManager.h" />
   </ItemGroup>
 </Project>
