--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -197,6 +197,15 @@
     <ClCompile Include="Engine\Editor\ComponentImGui.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Component\ColliderComponent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Core\Lib\Collision.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Component\Manager\CollisionManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -268,6 +277,9 @@
     <ClInclude Include="Engine\Component\Manager\ModelComponentManager.h" />
     <ClInclude Include="Engine\Component\Manager\MaterialManager.h" />
     <ClInclude Include="Engine\Editor\ComponentImGui.h" />
+    <ClInclude Include="Engine\Component\ColliderComponent.h" />
+    <ClInclude Include="Engine\Component\Manager\CollisionManager.h" />
+    <ClInclude Include="Engine\Core\Lib\Collision.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\MeshShader.hlsl" />
