--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClCompile Include="Game\Object3D\TemplateObject3D.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Lib\MathUtils\Algorithm.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -288,6 +291,7 @@
     <ClInclude Include="Engine\Core\Lib\Collision.h" />
     <ClInclude Include="Engine\Core\Graphics\Pipeline\MeshShaderPipelineState.h" />
     <ClInclude Include="Game\Object3D\TemplateObject3D.h" />
+    <ClInclude Include="Lib\MathUtils\Algorithm.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
