--- a/Project/Externals/imgui/imgui.vcxproj
+++ b/Project/Externals/imgui/imgui.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{79e5e7c0-1ea2-4355-b9b1-28cef9c7a302}</ProjectGuid>
+    <ProjectGuid>{af2cc86a-f74b-4938-b6fd-6b410193b121}</ProjectGuid>
     <RootNamespace>imgui</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -143,23 +143,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui.cpp" />
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_demo.cpp" />
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_draw.cpp" />
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_impl_dx12.cpp" />
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_impl_win32.cpp" />
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_tables.cpp" />
-    <ClCompile Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_widgets.cpp" />
+    <ClInclude Include="imconfig.h" />
+    <ClInclude Include="imgui.h" />
+    <ClInclude Include="imgui_impl_dx12.h" />
+    <ClInclude Include="imgui_impl_win32.h" />
+    <ClInclude Include="imgui_internal.h" />
+    <ClInclude Include="imstb_rectpack.h" />
+    <ClInclude Include="imstb_textedit.h" />
+    <ClInclude Include="imstb_truetype.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imconfig.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_impl_dx12.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_impl_win32.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imgui_internal.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imstb_rectpack.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imstb_textedit.h" />
-    <ClInclude Include="..\..\..\..\..\Engine\Engine\Project\Externals\imgui\imstb_truetype.h" />
+    <Text Include="LICENSE.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="imgui.cpp" />
+    <ClCompile Include="imgui_demo.cpp" />
+    <ClCompile Include="imgui_draw.cpp" />
+    <ClCompile Include="imgui_impl_dx12.cpp" />
+    <ClCompile Include="imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui_tables.cpp" />
+    <ClCompile Include="imgui_widgets.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
