--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -17,38 +17,38 @@ DockId=0x00000002,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=46,32
+Size=1440,810
 Collapsed=0
 
 [Window][Game]
 Pos=0,0
-Size=15,22
+Size=880,526
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Debug]
+Pos=0,0
+Size=880,526
+Collapsed=0
+DockId=0x0000000E,1
+
+[Window][Hierarchy]
+Pos=268,528
+Size=612,282
 Collapsed=0
 DockId=0x0000000D,0
 
-[Window][Debug]
-Pos=0,17
-Size=15,22
+[Window][Inspector]
+Pos=882,0
+Size=558,54
 Collapsed=0
 DockId=0x00000010,0
 
-[Window][Hierarchy]
-Pos=17,17
-Size=7,22
-Collapsed=0
-DockId=0x0000000F,0
-
-[Window][Inspector]
-Pos=26,0
-Size=6,22
-Collapsed=0
-DockId=0x00000012,0
-
 [Window][Engine]
-Pos=17,0
-Size=7,22
+Pos=0,528
+Size=266,282
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000000C,0
 
 [Window][Scene]
 Pos=17,8
@@ -68,60 +68,57 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][ShadowMap]
-Pos=0,17
-Size=15,22
+Pos=572,362
+Size=389,248
 Collapsed=0
-DockId=0x00000010,1
 
 [Window][Information]
-Pos=26,17
-Size=6,22
+Pos=882,56
+Size=558,98
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Draw]
-Pos=26,25
-Size=6,87
+Pos=882,156
+Size=558,86
 Collapsed=0
-DockId=0x00000018,0
+DockId=0x00000012,0
 
 [Window][Material]
-Pos=26,29
-Size=6,22
+Pos=882,330
+Size=558,480
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Transform]
-Pos=26,27
-Size=6,84
+Pos=882,244
+Size=558,84
 Collapsed=0
-DockId=0x00000019,0
+DockId=0x00000016,0
 
 [Docking][Data]
-DockNode                  ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
-  DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
-  DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
-DockSpace                 ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y
-  DockNode                ID=0x00000005 Parent=0x11111111 SizeRef=1920,39 Selected=0x9EBFE3AB
-  DockNode                ID=0x00000006 Parent=0x11111111 SizeRef=1920,1039 Split=X
-    DockNode              ID=0x00000008 Parent=0x00000006 SizeRef=493,1080 Split=Y Selected=0x29EABFBD
-      DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=492,252 Selected=0x00161063
-      DockNode            ID=0x0000000B Parent=0x00000008 SizeRef=492,271 Selected=0xE192E354
-    DockNode              ID=0x00000009 Parent=0x00000006 SizeRef=543,1080 Split=X Selected=0x26816F31
-      DockNode            ID=0x00000007 Parent=0x00000009 SizeRef=881,1033 Split=Y Selected=0x26816F31
-        DockNode          ID=0x0000000D Parent=0x00000007 SizeRef=957,518 Selected=0x26816F31
-        DockNode          ID=0x00000010 Parent=0x00000007 SizeRef=957,541 Selected=0x392A5ADD
-      DockNode            ID=0x0000000C Parent=0x00000009 SizeRef=1037,1033 Split=X Selected=0xE7039252
-        DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=470,1080 Split=Y Selected=0x29EABFBD
-          DockNode        ID=0x0000000E Parent=0x00000004 SizeRef=470,223 Selected=0x00161063
-          DockNode        ID=0x0000000F Parent=0x00000004 SizeRef=470,836 Selected=0x29EABFBD
-        DockNode          ID=0x00000011 Parent=0x0000000C SizeRef=565,1080 Split=Y Selected=0xE7039252
-          DockNode        ID=0x00000012 Parent=0x00000011 SizeRef=565,56 CentralNode=1 Selected=0xE7039252
-          DockNode        ID=0x00000013 Parent=0x00000011 SizeRef=565,1022 Split=Y Selected=0x50958808
-            DockNode      ID=0x00000014 Parent=0x00000013 SizeRef=565,100 Selected=0x50958808
-            DockNode      ID=0x00000015 Parent=0x00000013 SizeRef=565,920 Split=Y Selected=0x93DAEA18
-              DockNode    ID=0x00000016 Parent=0x00000015 SizeRef=565,173 Split=Y Selected=0x93DAEA18
-                DockNode  ID=0x00000018 Parent=0x00000016 SizeRef=565,87 Selected=0x93DAEA18
-                DockNode  ID=0x00000019 Parent=0x00000016 SizeRef=565,84 Selected=0x7DDCD467
-              DockNode    ID=0x00000017 Parent=0x00000015 SizeRef=565,745 Selected=0x6AA6D9AC
+DockNode            ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
+  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
+  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
+DockSpace           ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Split=X
+  DockNode          ID=0x00000004 Parent=0x11111111 SizeRef=880,810 Split=Y
+    DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
+    DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=493,1080 Split=Y Selected=0x29EABFBD
+        DockNode    ID=0x0000000A Parent=0x00000008 SizeRef=492,252 Selected=0x00161063
+        DockNode    ID=0x0000000B Parent=0x00000008 SizeRef=492,271 Selected=0xE192E354
+      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=543,1080 Split=Y Selected=0x26816F31
+        DockNode    ID=0x0000000E Parent=0x00000009 SizeRef=784,526 CentralNode=1 Selected=0x26816F31
+        DockNode    ID=0x0000000F Parent=0x00000009 SizeRef=784,282 Split=X Selected=0x00161063
+          DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=266,248 Selected=0x00161063
+          DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=612,248 Selected=0x29EABFBD
+  DockNode          ID=0x00000007 Parent=0x11111111 SizeRef=558,810 Split=Y Selected=0xE7039252
+    DockNode        ID=0x00000010 Parent=0x00000007 SizeRef=652,54 Selected=0xE7039252
+    DockNode        ID=0x00000011 Parent=0x00000007 SizeRef=652,754 Split=Y Selected=0x50958808
+      DockNode      ID=0x00000014 Parent=0x00000011 SizeRef=652,98 Selected=0x50958808
+      DockNode      ID=0x00000015 Parent=0x00000011 SizeRef=652,654 Split=Y Selected=0x93DAEA18
+        DockNode    ID=0x00000012 Parent=0x00000015 SizeRef=652,86 Selected=0x93DAEA18
+        DockNode    ID=0x00000013 Parent=0x00000015 SizeRef=652,566 Split=Y Selected=0x7DDCD467
+          DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=652,84 Selected=0x7DDCD467
+          DockNode  ID=0x00000017 Parent=0x00000013 SizeRef=652,480 Selected=0x6AA6D9AC
 
