--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -74,51 +74,59 @@ Collapsed=0
 
 [Window][Information]
 Pos=882,56
-Size=558,98
+Size=558,99
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Draw]
-Pos=882,156
-Size=558,86
+Pos=882,157
+Size=558,85
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Material]
-Pos=882,330
-Size=558,480
+Pos=882,332
+Size=558,406
 Collapsed=0
-DockId=0x00000017,0
+DockId=0x00000018,0
 
 [Window][Transform]
 Pos=882,244
-Size=558,84
+Size=558,86
 Collapsed=0
 DockId=0x00000016,0
 
+[Window][Individual]
+Pos=882,740
+Size=558,70
+Collapsed=0
+DockId=0x00000019,0
+
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
-  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
-  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
-DockSpace           ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Split=X
-  DockNode          ID=0x00000004 Parent=0x11111111 SizeRef=880,810 Split=Y
-    DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
-    DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=493,1080 Split=Y Selected=0x29EABFBD
-        DockNode    ID=0x0000000A Parent=0x00000008 SizeRef=492,252 Selected=0x00161063
-        DockNode    ID=0x0000000B Parent=0x00000008 SizeRef=492,271 Selected=0xE192E354
-      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=543,1080 Split=Y Selected=0x26816F31
-        DockNode    ID=0x0000000E Parent=0x00000009 SizeRef=784,526 CentralNode=1 Selected=0x26816F31
-        DockNode    ID=0x0000000F Parent=0x00000009 SizeRef=784,282 Split=X Selected=0x00161063
-          DockNode  ID=0x0000000C Parent=0x0000000F SizeRef=266,248 Selected=0x00161063
-          DockNode  ID=0x0000000D Parent=0x0000000F SizeRef=612,248 Selected=0x29EABFBD
-  DockNode          ID=0x00000007 Parent=0x11111111 SizeRef=558,810 Split=Y Selected=0xE7039252
-    DockNode        ID=0x00000010 Parent=0x00000007 SizeRef=652,54 Selected=0xE7039252
-    DockNode        ID=0x00000011 Parent=0x00000007 SizeRef=652,754 Split=Y Selected=0x50958808
-      DockNode      ID=0x00000014 Parent=0x00000011 SizeRef=652,98 Selected=0x50958808
-      DockNode      ID=0x00000015 Parent=0x00000011 SizeRef=652,654 Split=Y Selected=0x93DAEA18
-        DockNode    ID=0x00000012 Parent=0x00000015 SizeRef=652,86 Selected=0x93DAEA18
-        DockNode    ID=0x00000013 Parent=0x00000015 SizeRef=652,566 Split=Y Selected=0x7DDCD467
-          DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=652,84 Selected=0x7DDCD467
-          DockNode  ID=0x00000017 Parent=0x00000013 SizeRef=652,480 Selected=0x6AA6D9AC
+DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
+  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
+  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
+DockSpace             ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Split=X
+  DockNode            ID=0x00000004 Parent=0x11111111 SizeRef=880,810 Split=Y
+    DockNode          ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
+    DockNode          ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X
+      DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=493,1080 Split=Y Selected=0x29EABFBD
+        DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=492,252 Selected=0x00161063
+        DockNode      ID=0x0000000B Parent=0x00000008 SizeRef=492,271 Selected=0xE192E354
+      DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=543,1080 Split=Y Selected=0x26816F31
+        DockNode      ID=0x0000000E Parent=0x00000009 SizeRef=784,526 CentralNode=1 Selected=0x392A5ADD
+        DockNode      ID=0x0000000F Parent=0x00000009 SizeRef=784,282 Split=X Selected=0x00161063
+          DockNode    ID=0x0000000C Parent=0x0000000F SizeRef=266,248 Selected=0x00161063
+          DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=612,248 Selected=0x29EABFBD
+  DockNode            ID=0x00000007 Parent=0x11111111 SizeRef=558,810 Split=Y Selected=0xE7039252
+    DockNode          ID=0x00000010 Parent=0x00000007 SizeRef=652,54 Selected=0xE7039252
+    DockNode          ID=0x00000011 Parent=0x00000007 SizeRef=652,754 Split=Y Selected=0x50958808
+      DockNode        ID=0x00000014 Parent=0x00000011 SizeRef=652,99 Selected=0x50958808
+      DockNode        ID=0x00000015 Parent=0x00000011 SizeRef=652,653 Split=Y Selected=0x93DAEA18
+        DockNode      ID=0x00000012 Parent=0x00000015 SizeRef=652,85 Selected=0x93DAEA18
+        DockNode      ID=0x00000013 Parent=0x00000015 SizeRef=652,566 Split=Y Selected=0x7DDCD467
+          DockNode    ID=0x00000016 Parent=0x00000013 SizeRef=652,86 Selected=0x7DDCD467
+          DockNode    ID=0x00000017 Parent=0x00000013 SizeRef=652,478 Split=Y Selected=0x6AA6D9AC
+            DockNode  ID=0x00000018 Parent=0x00000017 SizeRef=558,406 Selected=0x6AA6D9AC
+            DockNode  ID=0x00000019 Parent=0x00000017 SizeRef=558,70 Selected=0x1C025548
 
