--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -114,7 +114,7 @@ DockSpace             ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Spli
         DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=492,252 Selected=0x00161063
         DockNode      ID=0x0000000B Parent=0x00000008 SizeRef=492,271 Selected=0xE192E354
       DockNode        ID=0x00000009 Parent=0x00000006 SizeRef=543,1080 Split=Y Selected=0x26816F31
-        DockNode      ID=0x0000000E Parent=0x00000009 SizeRef=784,526 CentralNode=1 Selected=0x392A5ADD
+        DockNode      ID=0x0000000E Parent=0x00000009 SizeRef=784,526 CentralNode=1 Selected=0x26816F31
         DockNode      ID=0x0000000F Parent=0x00000009 SizeRef=784,282 Split=X Selected=0x00161063
           DockNode    ID=0x0000000C Parent=0x0000000F SizeRef=266,248 Selected=0x00161063
           DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=612,248 Selected=0x29EABFBD
