--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -215,6 +215,15 @@
     <ClCompile Include="Lib\MathUtils\Algorithm.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Renderer\SpriteRenderer.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Component\Base\IComponent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Renderer\Managers\RenderObjectManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -292,6 +301,9 @@
     <ClInclude Include="Engine\Core\Graphics\Pipeline\MeshShaderPipelineState.h" />
     <ClInclude Include="Game\Object3D\TemplateObject3D.h" />
     <ClInclude Include="Lib\MathUtils\Algorithm.h" />
+    <ClInclude Include="Engine\Renderer\SpriteRenderer.h" />
+    <ClInclude Include="Engine\Component\Base\IComponent.h" />
+    <ClInclude Include="Engine\Renderer\Managers\RenderObjectManager.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
