--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -22,42 +22,43 @@ Collapsed=0
 
 [Window][Game]
 Pos=0,0
-Size=881,525
+Size=882,525
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Debug]
 Pos=0,0
-Size=881,525
+Size=882,525
 Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Hierarchy]
-Pos=883,0
-Size=166,810
+Pos=884,0
+Size=151,810
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Inspector]
-Pos=1051,0
-Size=389,810
+Pos=1037,0
+Size=403,810
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][Engine]
 Pos=0,527
-Size=227,283
+Size=241,283
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene]
-Pos=957,619
-Size=296,84
+Pos=243,527
+Size=271,283
 Collapsed=0
+DockId=0x00000011,0
 
 [Window][Project]
-Pos=229,527
-Size=652,283
+Pos=225,527
+Size=657,283
 Collapsed=0
 DockId=0x00000009,0
 
@@ -72,10 +73,9 @@ Size=389,248
 Collapsed=0
 
 [Window][Information]
-Pos=882,56
-Size=558,99
+Pos=1045,559
+Size=558,685
 Collapsed=0
-DockId=0x00000014,0
 
 [Window][Draw]
 Pos=882,157
@@ -84,22 +84,20 @@ Collapsed=0
 DockId=0x00000012,0
 
 [Window][Material]
-Pos=882,332
-Size=558,406
+Pos=1067,212
+Size=558,685
 Collapsed=0
-DockId=0x00000018,0
 
 [Window][Transform]
-Pos=882,244
-Size=558,86
+Pos=566,347
+Size=558,248
 Collapsed=0
-DockId=0x00000016,0
 
 [Window][Individual]
 Pos=882,740
 Size=558,70
 Collapsed=0
-DockId=0x00000019,0
+DockId=0x00000013,0
 
 [Window][GameObject]
 Pos=1108,609
@@ -111,29 +109,46 @@ Pos=304,647
 Size=291,524
 Collapsed=0
 
+[Window][Editor]
+Pos=888,346
+Size=270,283
+Collapsed=0
+
+[Window][Console]
+Pos=0,527
+Size=223,283
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Rendering]
+Pos=1107,158
+Size=260,106
+Collapsed=0
+
+[Window][Selected Object]
+Pos=62,60
+Size=453,126
+Collapsed=0
+
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
-  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
-  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
-DockSpace           ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Split=X
-  DockNode          ID=0x00000004 Parent=0x11111111 SizeRef=880,810 Split=Y
-    DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
-    DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X
-      DockNode      ID=0x0000000C Parent=0x00000006 SizeRef=881,524 Split=Y Selected=0x392A5ADD
-        DockNode    ID=0x0000000A Parent=0x0000000C SizeRef=881,525 CentralNode=1 Selected=0x26816F31
-        DockNode    ID=0x0000000B Parent=0x0000000C SizeRef=881,283 Split=X Selected=0x00161063
-          DockNode  ID=0x00000008 Parent=0x0000000B SizeRef=227,283 Selected=0x00161063
-          DockNode  ID=0x00000009 Parent=0x0000000B SizeRef=652,283 Selected=0xD04A4B96
-      DockNode      ID=0x0000000D Parent=0x00000006 SizeRef=557,524 Split=X Selected=0xE7039252
-        DockNode    ID=0x0000000E Parent=0x0000000D SizeRef=166,810 Selected=0x29EABFBD
-        DockNode    ID=0x0000000F Parent=0x0000000D SizeRef=389,810 Selected=0xE7039252
-  DockNode          ID=0x00000007 Parent=0x11111111 SizeRef=558,810 Split=Y Selected=0xE7039252
-    DockNode        ID=0x00000014 Parent=0x00000007 SizeRef=652,99 Selected=0x50958808
-    DockNode        ID=0x00000015 Parent=0x00000007 SizeRef=652,653 Split=Y Selected=0x93DAEA18
-      DockNode      ID=0x00000012 Parent=0x00000015 SizeRef=652,85 Selected=0x93DAEA18
-      DockNode      ID=0x00000013 Parent=0x00000015 SizeRef=652,566 Split=Y Selected=0x7DDCD467
-        DockNode    ID=0x00000016 Parent=0x00000013 SizeRef=652,86 Selected=0x7DDCD467
-        DockNode    ID=0x00000017 Parent=0x00000013 SizeRef=652,478 Split=Y Selected=0x6AA6D9AC
-          DockNode  ID=0x00000018 Parent=0x00000017 SizeRef=558,406 Selected=0x6AA6D9AC
-          DockNode  ID=0x00000019 Parent=0x00000017 SizeRef=558,70 Selected=0x1C025548
+DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
+  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=172,219 Selected=0x6FEC1CC8
+  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=177,219 Selected=0x44A6A033
+DockSpace             ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Split=X
+  DockNode            ID=0x0000000C Parent=0x11111111 SizeRef=882,810 Split=X
+    DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
+      DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
+      DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x26816F31
+        DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
+          DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0x49278EEE
+            DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=223,283 Selected=0x49278EEE
+            DockNode  ID=0x00000009 Parent=0x00000010 SizeRef=656,283 Selected=0xD04A4B96
+          DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=654,283 Selected=0xE192E354
+    DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
+      DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
+      DockNode        ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
+  DockNode            ID=0x0000000D Parent=0x11111111 SizeRef=556,810 Split=X Selected=0x29EABFBD
+    DockNode          ID=0x0000000E Parent=0x0000000D SizeRef=151,810 Selected=0x29EABFBD
+    DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=403,810 Selected=0xE7039252
 
