--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -224,6 +224,12 @@
     <ClCompile Include="Engine\Renderer\Managers\RenderObjectManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Component\AnimationComponent.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Component\Manager\AnimationComponentManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -304,6 +310,8 @@
     <ClInclude Include="Engine\Renderer\SpriteRenderer.h" />
     <ClInclude Include="Engine\Component\Base\IComponent.h" />
     <ClInclude Include="Engine\Renderer\Managers\RenderObjectManager.h" />
+    <ClInclude Include="Engine\Component\AnimationComponent.h" />
+    <ClInclude Include="Engine\Component\Manager\AnimationComponentManager.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
