--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -139,7 +139,7 @@ DockSpace             ID=0x11111111 Window=0xA87D555D Pos=0,0 Size=1440,810 Spli
     DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x26816F31
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x392A5ADD
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
           DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0x49278EEE
             DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=223,283 Selected=0x49278EEE
