--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -236,6 +236,9 @@
     <ClCompile Include="Engine\Core\Graphics\Mesh\MeshIndirectCommand.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Core\Graphics\Mesh\InstancedMesh.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -320,6 +323,7 @@
     <ClInclude Include="Engine\Component\Manager\AnimationComponentManager.h" />
     <ClInclude Include="Engine\Core\Graphics\Mesh\MeshCommandContext.h" />
     <ClInclude Include="Engine\Core\Graphics\Mesh\MeshIndirectCommand.h" />
+    <ClInclude Include="Engine\Core\Graphics\Mesh\InstancedMesh.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
