--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -134,7 +134,7 @@
     <ClCompile Include="Lib\MathUtils\Vector4.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Game\Base\BaseGameObject.cpp">
+    <ClCompile Include="Engine\Component\User\Collider.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Game\Camera\Base\BaseCamera.cpp">
@@ -295,7 +295,7 @@
     <ClInclude Include="Lib\MathUtils\Vector2.h" />
     <ClInclude Include="Lib\MathUtils\Vector3.h" />
     <ClInclude Include="Lib\MathUtils\Vector4.h" />
-    <ClInclude Include="Game\Base\BaseGameObject.h" />
+    <ClInclude Include="Engine\Component\User\Collider.h" />
     <ClInclude Include="Game\Camera\Base\BaseCamera.h" />
     <ClInclude Include="Game\Camera\Manager\CameraManager.h" />
     <ClInclude Include="Game\Camera\GameCamera.h" />
