--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -34,13 +34,13 @@ DockId=0x0000000A,1
 
 [Window][Hierarchy]
 Pos=884,0
-Size=181,810
+Size=123,810
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][Inspector]
-Pos=1067,0
-Size=373,810
+Pos=1009,0
+Size=431,810
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -162,7 +162,7 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1440,810 Spli
     DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0xD1EB2482
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x1E7E18E3
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
           DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0x49278EEE
             DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=223,283 Selected=0xEA83D666
@@ -172,10 +172,10 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1440,810 Spli
       DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
       DockNode        ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
   DockNode            ID=0x0000000D Parent=0x11111111 SizeRef=556,810 Split=X Selected=0x29EABFBD
-    DockNode          ID=0x0000000E Parent=0x0000000D SizeRef=181,810 Split=Y Selected=0xBABDAE5E
+    DockNode          ID=0x0000000E Parent=0x0000000D SizeRef=123,810 Split=Y Selected=0xBABDAE5E
       DockNode        ID=0x00000014 Parent=0x0000000E SizeRef=171,233 Split=Y Selected=0xBABDAE5E
         DockNode      ID=0x00000016 Parent=0x00000014 SizeRef=171,106 Selected=0xBABDAE5E
         DockNode      ID=0x00000017 Parent=0x00000014 SizeRef=171,125 Selected=0xCF2F21A5
       DockNode        ID=0x00000015 Parent=0x0000000E SizeRef=171,575 Selected=0x031DC75C
-    DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=373,810 Selected=0x36DC96AB
+    DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=431,810 Selected=0x36DC96AB
 
