BlendModeによるアルファの修正

--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -57,8 +57,8 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][Project]
-Pos=225,527
-Size=657,283
+Pos=230,527
+Size=652,283
 Collapsed=0
 DockId=0x00000009,0
 
@@ -116,7 +116,7 @@ Collapsed=0
 
 [Window][Console]
 Pos=0,527
-Size=223,283
+Size=228,283
 Collapsed=0
 DockId=0x00000008,0
 
@@ -162,11 +162,11 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1440,810 Spli
     DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=Y
-        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0x1E7E18E3
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0xD1EB2482
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
-          DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0x49278EEE
-            DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=223,283 Selected=0xEA83D666
-            DockNode  ID=0x00000009 Parent=0x00000010 SizeRef=656,283 Selected=0x9C21DE82
+          DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0xEA83D666
+            DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=228,283 Selected=0xEA83D666
+            DockNode  ID=0x00000009 Parent=0x00000010 SizeRef=652,283 Selected=0x9C21DE82
           DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=654,283 Selected=0xE192E354
     DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
       DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
