--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -251,6 +251,15 @@
     <ClCompile Include="Engine\Component\User\ComponentHelper.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Editor\Base\IGameEditor.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Editor\Manager\GameEditorManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Editor\TestEditor.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -339,6 +348,9 @@
     <ClInclude Include="Engine\Component\Manager\SpriteComponentManager.h" />
     <ClInclude Include="Game\Camera\Camera2D.h" />
     <ClInclude Include="Engine\Component\User\ComponentHelper.h" />
+    <ClInclude Include="Engine\Editor\Base\IGameEditor.h" />
+    <ClInclude Include="Engine\Editor\Manager\GameEditorManager.h" />
+    <ClInclude Include="Game\Editor\TestEditor.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
