--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -33,14 +33,14 @@ Collapsed=0
 DockId=0x0000000A,1
 
 [Window][Hierarchy]
-Pos=884,0
-Size=123,810
+Pos=228,527
+Size=654,283
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=1009,0
-Size=431,810
+Pos=884,0
+Size=556,810
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -57,10 +57,9 @@ Collapsed=0
 DockId=0x00000011,0
 
 [Window][Project]
-Pos=230,527
+Pos=605,544
 Size=652,283
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][WindowConfig]
 Size=32,22
@@ -116,7 +115,7 @@ Collapsed=0
 
 [Window][Console]
 Pos=0,527
-Size=228,283
+Size=226,283
 Collapsed=0
 DockId=0x00000008,0
 
@@ -145,13 +144,111 @@ Collapsed=0
 Pos=884,108
 Size=171,125
 Collapsed=0
-DockId=0x00000017,0
+DockId=0x00000014,0
 
 [Window][Objects]
 Pos=884,235
 Size=171,575
 Collapsed=0
 DockId=0x00000015,0
+
+[Window][Dear ImGui Style Editor]
+Pos=366,129
+Size=708,443
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=831,160
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
+[Window][Delete?]
+Pos=543,345
+Size=353,120
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=487,307
+Size=465,196
+Collapsed=0
+
+[Table][0x51D6F5EA,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE102187A,3]
+RefScale=16
+Column 0  Width=72
+Column 1  Width=72
+Column 2  Width=72
+
+[Table][0xF1421304,3]
+RefScale=16
+Column 0  Width=72
+Column 1  Width=72
+Column 2  Weight=1.0000
+
+[Table][0xE212E0F0,6]
+RefScale=16
+Column 0  Width=72
+Column 1  Width=72
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x86C9FC97,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x95990F63,3]
+RefScale=16
+Column 0  Width=72
+Column 1  Width=72
+Column 2  Width=72
+
+[Table][0x603C335E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA6C6558A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3A20F3F3,3]
+RefScale=16
+Column 0  Width=64
+Column 1  Width=64
+Column 2  Width=64
+
+[Table][0xEA44DE71,3]
+RefScale=16
+Column 0  Weight=1.0000
+Column 1  Width=96
+Column 2  Width=144
+
+[Table][0x29CD9FF7,3]
+
+[Table][0x369EB90F,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x2ACCE68A,3]
+RefScale=16
+Column 0  Width=96
+Column 1  Width=96
+Column 2  Width=96
+
+[Table][0xEB78AB2C,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
 [Docking][Data]
 DockNode              ID=0x00000001 Pos=946,306 Size=551,268 Split=X Selected=0x6FEC1CC8
@@ -165,17 +262,15 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1440,810 Spli
         DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=881,525 CentralNode=1 Selected=0xD1EB2482
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=881,283 Split=X Selected=0x00161063
           DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=225,283 Split=X Selected=0xEA83D666
-            DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=228,283 Selected=0xEA83D666
-            DockNode  ID=0x00000009 Parent=0x00000010 SizeRef=652,283 Selected=0x9C21DE82
+            DockNode  ID=0x00000008 Parent=0x00000010 SizeRef=226,283 Selected=0xEA83D666
+            DockNode  ID=0x00000009 Parent=0x00000010 SizeRef=654,283 Selected=0xBABDAE5E
           DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=654,283 Selected=0xE192E354
     DockNode          ID=0x00000007 Parent=0x0000000C SizeRef=558,810 Split=Y Selected=0xE7039252
       DockNode        ID=0x00000012 Parent=0x00000007 SizeRef=652,85 Selected=0x93DAEA18
       DockNode        ID=0x00000013 Parent=0x00000007 SizeRef=652,566 Selected=0x7DDCD467
   DockNode            ID=0x0000000D Parent=0x11111111 SizeRef=556,810 Split=X Selected=0x29EABFBD
-    DockNode          ID=0x0000000E Parent=0x0000000D SizeRef=123,810 Split=Y Selected=0xBABDAE5E
-      DockNode        ID=0x00000014 Parent=0x0000000E SizeRef=171,233 Split=Y Selected=0xBABDAE5E
-        DockNode      ID=0x00000016 Parent=0x00000014 SizeRef=171,106 Selected=0xBABDAE5E
-        DockNode      ID=0x00000017 Parent=0x00000014 SizeRef=171,125 Selected=0xCF2F21A5
+    DockNode          ID=0x0000000E Parent=0x0000000D SizeRef=130,810 Split=Y Selected=0xBABDAE5E
+      DockNode        ID=0x00000014 Parent=0x0000000E SizeRef=171,233 Selected=0xBABDAE5E
       DockNode        ID=0x00000015 Parent=0x0000000E SizeRef=171,575 Selected=0x031DC75C
-    DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=431,810 Selected=0x36DC96AB
+    DockNode          ID=0x0000000F Parent=0x0000000D SizeRef=424,810 Selected=0x36DC96AB
 
